[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://fonts/Boxy-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[node name="Main_UI" type="Control" groups=[
"UI",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="YOU WIN" type="Label" parent="CenterContainer2"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 350.0
margin_top = 303.0
margin_right = 930.0
margin_bottom = 416.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "YOU WIN"

[node name="CenterContainer" type="CenterContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
margin_bottom = 57.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 375.0
margin_right = 904.0
margin_bottom = 57.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 251.0
margin_bottom = 57.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/HBoxContainer"]
margin_right = 195.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PEAS:"

[node name="Pea_Count" type="Label" parent="CenterContainer/HBoxContainer/HBoxContainer"]
margin_left = 215.0
margin_right = 251.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 271.0
margin_right = 529.0
margin_bottom = 57.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/HBoxContainer2"]
margin_right = 202.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "KEYS:"

[node name="Key_Count" type="Label" parent="CenterContainer/HBoxContainer/HBoxContainer2"]
margin_left = 222.0
margin_right = 258.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

